# libsvclogpp

./: ChangeLog  Makefile.am  Makefile.in  README  configure  configure.ac
examples/: Makefile  simple.cpp
src/: svclog.cpp  svclog.hpp  svclog_r.cpp
